cleanup to docker stuff (#37)